Fix navbar spacing

--- a/app.css
+++ b/app.css
@@ -1,4 +1,3 @@
 body {
-    margin-top: 50px;
     background-color: darkgray;
 }
